# steerbot

./: .gitignore  README.md  pyproject.toml  tmp.py
examples/: number_search_cfg.py  number_search_cot.py  run_genlm_shard_jobs.sh  run_vllm_rollouts.py  textcraft_multi_agent.py  try_steered_agent.py  try_steered_lm.py
steerbot/: __init__.py
steerbot/potentials/: cot_control.py  cot_sentence_cap.py  cot_sentence_min.py  cot_utils.py  cot_word_cap.py
steerbot/utils/: llm.py
